--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "electron": "^17.1.2",
-    "electron-pos-printer": "^1.2.4"
+    "electron-pos-printer": "github:Hubertformin/electron-pos-printer#a98a9be"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
-    "@types/node": "^17.0.21",
     "typescript": "^4.6.2"
   }
 }
